# insaroule

./: .env.dist  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTE  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml  test.yml
project/: manage.py
project/accounts/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  tasks.py  tests.py  tokens.py  urls.py  views.py
project/accounts/api/: serializers.py  views.py
project/accounts/fixtures/: users.json
project/accounts/migrations/: 0001_initial.py  0002_alter_usernotificationpreferences_options.py  0002_user_email_verified_alter_user_email.py  0002_usernotificationpreferences.py  0003_user_last_verification_email_sent.py  0003_usernotificationpreferences_ride_sharing_suggestion_notification.py  0004_user_preferred_language.py  0005_multifactorauthenticationdevice.py  0006_alter_multifactorauthenticationdevice_totp_secret.py  0007_multifactorauthenticationpolicy.py  0008_multifactorauthenticationpolicy_enforced_for_staff_and_more.py
project/accounts/templates/: login.html  register.html
project/accounts/tests/: factories.py  test_forms.py  test_mfa.py  test_middlewares.py  test_models.py  test_tasks.py  test_views.py
project/accounts/views/: __init__.py  account.py  mfa.py  profile.py  registration.py  username_send.py  verify_email.py
project/carpool/: admin.py  forms.py  mixins.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
project/carpool/api/: serializers.py  views.py
project/carpool/forms/: location.py  ride.py  vehicle.py
project/carpool/migrations/: 0001_initial.py  0002_alter_location_city_alter_location_street_and_more.py  0002_remove_vehicle_color_vehicle_description_and_more.py  0002_ride_vehicle_vehicle_driver_alter_ride_rider_and_more.py  0002_vehicle.py  0003_alter_ride_options.py  0003_alter_vehicle_driver_alter_vehicle_name.py  0003_localisation_ride_payment_method_ride_price_and_more.py  0003_location_ride_payment_method_ride_price_ride_rider_and_more.py  0004_location_label.py  0004_statistics_monthlystatistics.py  0005_alter_monthlystatistics_options_and_more.py  0006_ride_seats_offered.py  0007_reservation.py  0008_alter_reservation_status.py  0009_alter_ride_comment.py  0010_remove_step_name.py  0011_alter_ride_payment_method.py
project/carpool/models/: __init__.py  reservation.py  ride.py  statistics.py
project/carpool/templatetags/: duration.py
project/carpool/tests/: factories.py  test_forms.py  test_location_validation.py  test_models.py  test_templatetags.py  test_views.py
project/carpool/views/: __init__.py  api.py  backoffice.py  rides.py  vehicle.py
project/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  tasks.py  urls.py  views.py
project/chat/api/: serializers.py  views.py
project/chat/migrations/: 0001_initial.py  0002_chatmessage_is_read.py  0002_chatmessage_notified_at_chatmessage_read_at.py  0002_remove_chatrequest_status.py
project/chat/tests/: factories.py  test_consumers.py  test_models.py  test_views.py
project/project/: asgi.py  celery.py  context_processors.py  routers.py  settings.py  urls.py  views.py  wsgi.py
project/project/settings/: development.py  production.py  testing.py
project/static/css/: bootstrap.min.css  bootstrap.min.css.map  insa.css
project/static/js/: widgets.js
project/static/scss/: custom.scss
project/templates/: base.html
project/templates/emails/: consent_footer.txt  mandatory_footer.txt  signature.txt
project/templates/includes/: footer.html  langselect.html  navbar.html
(+66 files in other folders)
