[project]
name = "insaroule"
version = "0.1.0"
description = "Yet another carpooling application"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.5.3",
    "channels>=4.2.2",
    "channels-redis>=4.3.0",
    "django>=5.2.4",
    "django-environ>=0.12.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.9",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
]
